# alphaz-coral

./: .gitignore  HANDOFF.md  README.md
.claude/: rnd-scratchpad.md
coral-patches/: 0001-Add-agents.knowledge-ablation-flag-make-empty-heartb.patch  0002-Fix-the-second-heartbeat-regrowth-path-_preprocess-b.patch  0003-Close-two-knowledge-channel-leaks-a-live-Condition-A.patch  0004-Stop-auto-creating-notes-skills-dirs-on-read-paths-C.patch  0005-task4-publication-gate-groundwork-config-flag-notes..patch  0006-task4-verification-core-verify_note-Verdict-in-coral.patch  0007-task4-grouping-ranking-and-index-rendering-in-public.patch  0008-task4-harvest-serve-core-notes-view-generation-skill.patch  0009-task4-gate-the-worktree-symlinks-notes-skills-become.patch  0010-task4-consolidate-publication.py-mirror-harvest-core.patch  0011-task4-wire-the-publication-pass-into-the-manager-mon.patch  0012-task4-end-to-end-acceptance-tests-for-the-publicatio.patch  0013-task4-multi-attempt-evidence-path-consolidator-confi.patch  0014-task4-LLM-consolidation-core-verified-merge-with-arc.patch  0015-task4-final-publish-rename-shares-the-archive-rollba.patch  0016-task4-wire-the-LLM-consolidator-into-the-publication.patch  0017-task4-extract-consolidator-text-from-stream-json-rou.patch  README.md
report/: index.html
task1/: REPORT.md  task.yaml  verify.py
task2/: REPORT.md  task.yaml
task2/grader/: pyproject.toml
task2/grader/src/jssp_grader/: __init__.py  grader.py
task3/: README.md  analyze.py  monitor_and_s3.sh  rerun_nok.sh  rerun_nok_s3.sh  run_ablation.sh  run_full_s3.sh  (+6 more)
(+345 files in other folders)
