[project]
name = "jssp-grader"
version = "0.1.0"
description = "CORAL grader for the job-shop scheduling task."
requires-python = ">=3.11"
# The agent's solve() runs under THIS venv (get_python_command is pinned to
# sys.executable), so this list is exactly the dependency surface it may import.
# numpy is allowed; no exact solver (ortools / pulp / cvxpy) is available.
dependencies = [
    "coral",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jssp_grader"]
